// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox render component 1`] = `
<ul
  required="true"
>
  <li
    className="form__check"
    htmlFor={6792}
  >
    <input
      className="form__input"
      data-input-value="Cozinhar"
      id={6792}
      name="nameTest"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor={6792}
    >
      Cozinhar
    </label>
  </li>
</ul>
`;

exports[`Checkbox with input text render component 1`] = `
<ul
  required="true"
>
  <li
    className="form__check"
    htmlFor={7639}
  >
    <input
      className="form__input"
      data-input-value="OTHER"
      id={7639}
      name="nameTest"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      htmlFor={7639}
    >
      <input
        className="form__input"
        data-id={7639}
        disabled={true}
        onBlur={[Function]}
        type="text"
      />
    </label>
  </li>
</ul>
`;
